--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 BD_URL=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.
+DB_HOST=aws-0-us-east-1.pooler.supabase.com
+DB_PORT=5432
+DB_NAME=postgres
+DB_USER=postgres.yfhdqesoavdvlvzqqcua
+DB_PASSWORD=Me343a
